# tesseract

./: CMakeLists.txt  README.md
include/: Api.hpp  Handler.hpp  Template.hpp  Tesseract.hpp
src/: Handler.cpp
